--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -1,19 +1,21 @@
 
 #+TITLE: Configuración de Emacs
+#+AUTHOR: Martín Alsinet
+#+DATE: 2017
 
 * Motivación
   
-  Una vez que uno decide utilizar *emacs* como editor de texto, una de las cosas que debe hacer es personalizar el editor según sus preferencias. Para ello es necesario editar el archivo *~/.emacs* y entonces comienzan los problemas. Se van a encontrar con miles y miles de ejemplos de este archivo de configuración, con miles de configuraciones y comandos diferentes y se hace extremadamente tedioso entender y aprender cuáles son las que nos van a servir o las que nos convendría utilizar.
+  Una vez que uno decide utilizar *emacs* como editor de texto, una de las cosas que debe hacer es personalizar el editor según sus preferencias. Para ello es necesario editar el archivo *~/.emacs* y entonces comienzan los problemas. Se van a encontrar con miles y miles de ejemplos de este archivo de configuración, con miles de configuraciones y comandos diferentes; y se hace extremadamente tedioso entender y aprender cuáles son las que nos van a servir o las que nos convendría utilizar.
   
-  Un problema muy común con el archivo .emacs es que rápidamente se va saliendo de control y al cabo de un tiempo ya no se sabe qué hace cada parte y empieza a aparecer una especie de miedo supersticioso a modificar las preferencias, que se traduce en una tendencia a mantener bloques que ya uno se olvidó qué hacen pero que siguen conservando "para no romper lo que me está funcionando".
+  Un problema muy común con el archivo .emacs es que rápidamente se va saliendo de control y al cabo de un tiempo ya no se sabe qué hace cada parte. Luego empieza a aparecer una especie de miedo supersticioso a modificar las preferencias, que se traduce en una tendencia a mantener bloques que uno ya se olvidó qué es lo que hacen pero que siguen conservando "para no romper lo que me está funcionando".
   
   Cada vez que intenté utilizar emacs como mi editor principal tuve este problema, y era un motivo importante de mi frustración con el uso del editor. Por suerte hubo gente que lo solucionó de una manera muy elegante y que permite realizar lo que Donald Knuth denominó "Literate Programming", es decir, un programa que en realidad es documentación ejecutable, que se lee como un documento para que los seres humanos lo puedan entender y que al mismo tiempo es código fuente para que la máquina (emacs) lo pueda ejecutar.
   
-  Básicamente la solución consiste en utilizar *org-mode*, que es un modo mayor de emacs para escribir documentos y listas de tareas, y que permite incorporar bloques de código dentro de un documento. La ventaja principal que tiene este modo es que se puede visualizar el documento de manera jerárquica, con nodos y subnodos que se pueden ir abriendo y ocultando según se requiera.
+  Básicamente la solución consiste en utilizar *org-mode*, que es un modo mayor de emacs para escribir documentos y listas de tareas, y que permite incorporar (y ejecutar) bloques de código dentro de un documento. La ventaja principal que tiene este modo es que se puede visualizar el documento de manera jerárquica, con nodos y subnodos que se pueden ir abriendo y ocultando según se requiera.
   
   Si abrieran con emacs este archivo, que tiene todas mis preferencias de configuración, van a ver un listado similar al siguiente:
-  
-  #+BEGIN_QUOTE
+ 
+#+BEGIN_SRC
 - Motivación
 - Información Personal
 - Repositorios de Paquetes
@@ -23,13 +25,13 @@
 - Movimiento del Cursor
 - Teclado
 - Paquetes Varios
-  #+END_QUOTE
+#+END_SRC
   
   Cada uno de los títulos del documento es una sección que se puede abrir con la tecla TAB (y cerrarla con Shift-TAB) para examinarla en detalle, donde se van agregando ítems y sub-ítems que contienen los diferentes bloques de código para configurar las diversas funcionalidades del editor de acuerdo a mis preferencias.
   
   En el archivo *~/.emacs* ahora lo único que me queda es una llamada a la función *org-babel-load-file* que lo que hace es cargar el archivo *configuration.org* y ejecutarlo cada vez que se inicia el editor.
   
-  De esta manera, me queda un documento que me explica en detalle qué hace cada una de las opciones y que está ordenado, que es fácil de navegar y sobre todo de modificar. Ahora puedo entender qué hace cada opción, porque cada sección y cada ítem me indica en detalle qué es lo que hace el bloque de código correspondiente. Y si existe una opción que no tiene sentido o que he dejado de utilizar, puedo cambiarla o incluso borrarla sin miedo a afectar el comportamiento general del editor.
+  De esta manera, me queda un documento que me explica en detalle qué hace cada una de las opciones y que está ordenado, que es fácil de navegar y sobre todo de modificar. Ahora puedo entender qué hace cada opción, porque explico en detalle en cada sección y en cada ítem qué es lo que hace el bloque de código correspondiente. Y si existe una opción que ya no tiene sentido o que he dejado de utilizar, puedo cambiarla o incluso borrarla sin miedo a afectar el comportamiento general del editor.
   
 ** Algunos links que utilicé como inspiración
 
@@ -106,7 +108,7 @@
   
 * Apariencia
   
-  En esta sección puse las preferencias que tienen que ver con el aspecto visual del editor. Uso emacs desde una terminal y me manejo para todo con el teclado, por lo tanto no necesito ocupar espacio de la pantalla con barras de menú o herramientas, y además le desactivo todos los sonidos porque me parecen muy molestos.
+  En esta sección puse las preferencias que tienen que ver con el aspecto visual del editor. Uso emacs desde una terminal y me manejo para todo con el teclado, por lo tanto no necesito ocupar espacio de la pantalla con barras de menú o herramientas, y además desactivo todos los sonidos porque me parecen muy molestos.
 
   Como conjunto de colores utilizo el *zenburn-theme*, que es conjunto de colores obscuro (letras en blanco y en color sobre un fondo negro) que cansa menos la vista que el conjunto por defecto (letras en negro y en color sobre un fondo blanco).
   
@@ -142,7 +144,7 @@
 
 ** Visual line mode
 
-   Para los archivos de texto activo el modo *visual-line-mode* que hace que el texto se acomode a la pantalla sin cortar las palabras cuando la línea excede el ancho de la pantalla, enviando la última palabra al siguiente renglón.
+   Para los archivos de texto activo el modo *visual-line-mode* que hace que el texto se acomode a la pantalla sin cortar las palabras cuando la línea excede el ancho máximo de la pantalla, enviando la última palabra al siguiente renglón.
 
 #+BEGIN_SRC emacs-lisp
 (add-hook 'text-mode-hook 'turn-on-visual-line-mode)
@@ -308,9 +310,10 @@ point reaches the beginning or end of the buffer, stop there."
 (use-package flx-ido 
   :ensure t 
   :config (flx-ido-mode t))
-(use-package smex 
-  :ensure t 
-  :config (define-key global-map (kbd "M-x") 'smex))
+(use-package smex
+  :ensure t
+  :bind (("M-x" . smex))
+  :config (smex-initialize))
 #+END_SRC
 
 ** Project management
@@ -324,7 +327,7 @@ point reaches the beginning or end of the buffer, stop there."
 
 ** Scheme Programming
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp
 (use-package geiser 
   :ensure t
   :config (progn (org-babel-do-load-languages
