--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -49,7 +49,7 @@
 
 #+BEGIN_SRC emacs-lisp
 (setq user-full-name "Martín Alsinet"
-      user-mail-address "malsinet@gmail.com")
+      user-mail-address "malsinet")
 #+END_SRC
 
 * Repositorios de Paquetes
@@ -333,16 +333,18 @@ point reaches the beginning or end of the buffer, stop there."
   :config (progn (org-babel-do-load-languages
                    'org-babel-load-languages
                      '((scheme . t)
+                       (sh . t)
                        (emacs-lisp . t)))
                  (setq geiser-scheme-implementation 'mit)))
 #+END_SRC
 
-** Text modes (yaml, json, markdown)
+** Text modes (yaml, json, markdown, dockerfiles)
 
 #+BEGIN_SRC emacs-lisp
 (use-package yaml-mode :ensure t)
 (use-package markdown-mode :ensure t)
 (use-package json-mode :ensure t)
+(use-package dockerfile-mode :ensure t)
 #+END_SRC
 
 ** Editor tools
