--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -223,6 +223,7 @@ Cuando uso org-mode para hacer presentaciones prefiero ocultar la línea de esta
 (size-indication-mode t)
 #+END_SRC
 
+* Lenguajes de Programación
 ** Web Mode
 
 #+BEGIN_SRC emacs-lisp
@@ -235,6 +236,71 @@ Cuando uso org-mode para hacer presentaciones prefiero ocultar la línea de esta
   :config (progn 
             (setq web-mode-markup-indent-offset 2)
             (setq web-mode-css-indent-offset 2)))
+#+END_SRC
+
+** HTML
+*** Htmlize
+
+Convierte un buffer a HTML - [[https://github.com/hniksic/emacs-htmlize][Github]]
+
+Org-mode usa HTMLIZE para exportar a HTML.
+
+#+BEGIN_SRC emacs-lisp
+(use-package htmlize :ensure t)
+#+END_SRC
+
+*** Emmet Mode
+
+Produce HTML usando sintaxis abreviada basada en selectores CSS - [[https://github.com/smihica/emmet-mode][Github]]
+
+Ejemplo: Ingresando la siguiente abreviación =ul>li.item$*3= y luego presionando =C-j= se genera el un UL con tres LI de clase "itemX"
+
+#+BEGIN_SRC
+<ul>
+   <li class="item1"></li>
+   <li class="item2"></li>
+   <li class="item3"></li>
+</ul>
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(use-package emmet-mode 
+   :ensure t
+   :init
+   (progn 
+     ;; Auto-start on any markup modes
+     (add-hook 'sgml-mode-hook 'emmet-mode)
+     ;; enable Emmet's css abbreviation.
+     (add-hook 'css-mode-hook  'emmet-mode)))
+#+END_SRC
+
+Opciones Disponibles:
+
+#+BEGIN_SRC
+
+; By default, inserted markup will be indented with indent-region, according to the buffer's mode. To disable this, do:
+; (add-hook 'emmet-mode-hook (lambda () (setq emmet-indent-after-insert nil)))
+
+; If you disable indent-region, you can set the default indent level thusly:
+; (add-hook 'emmet-mode-hook (lambda () (setq emmet-indentation 2))) ;; indent 2 spaces.
+
+; If you want the cursor to be positioned between first empty quotes after expanding:
+; (setq emmet-move-cursor-between-quotes t) ;; default nil
+
+; Or if you don't want to move cursor after expanding:
+; (setq emmet-move-cursor-after-expanding nil) ;; default t
+
+; If you want to use emmet with react-js's JSX, you probably want emmet to expand 'className="..."' instead of 'class="..."':
+; (setq emmet-expand-jsx-className? t) ;; default nil
+
+#+END_SRC
+
+** JS2 Mode
+
+Improved Javascript Mode - [[https://github.com/mooz/js2-mode][Github]]
+
+#+BEGIN_SRC emacs-lisp
+(use-package js2-mode :ensure t)
 #+END_SRC
 
 ** PHP Mode
@@ -254,6 +320,119 @@ Cuando uso org-mode para hacer presentaciones prefiero ocultar la línea de esta
         (setq tab-width 4)
         (setq python-indent 4)
         (setq python-indent-offset 4)))
+#+END_SRC
+
+** Expand region
+
+Selección inteligente de bloques de acuerdo al formato del código - [[https://github.com/magnars/expand-region.el][Github]] - [[http://emacsrocks.com/e09.html][YouTube]]
+
+#+BEGIN_SRC emacs-lisp
+(use-package expand-region :ensure t)
+#+END_SRC
+
+** Live Coding
+*** Simple-Httpd
+
+Emacs web server - [[https://github.com/skeeto/emacs-web-server][Github]]
+
+#+BEGIN_QUOTE
+Once loaded, there are only two interactive functions to worry about: =httpd-start= and =httpd-stop=. Files are served from =httpd-root= (can be changed at any time) on port =httpd-port=. Directory listings are enabled by default but can be disabled by setting =httpd-listings= to nil.
+#+END_QUOTE
+
+#+BEGIN_SRC emacs-lisp
+(use-package simple-httpd :ensure t)
+#+END_SRC
+
+*** Impatient Mode
+
+Live coding HTML - [[https://github.com/skeeto/impatient-mode][Github]] - [[http://youtu.be/QV6XVyXjBO8][YouTube example]]
+
+#+BEGIN_QUOTE
+Enable the web server provided by simple-httpd (=M-x httpd-start=).
+
+Publish buffers by enabling the minor mode impatient mode (=M-x impatient-mode=).
+
+And then point your browser to http://localhost:8080/imp/, select a buffer, and watch your changes appear as you type!
+
+If you are editing HTML that references resources in other files (like CSS) you can enable impatient-mode on those buffers as well. This will cause your browser to live refresh the page when you edit a referenced resource.
+#+END_QUOTE
+
+#+BEGIN_SRC emacs-lisp
+(use-package impatient-mode :ensure t)
+#+END_SRC
+
+*** Skewer Mode
+
+Live Coding HTML - [[https://github.com/skeeto/skewer-mode][Github]] - [[http://youtu.be/4tyTgyzUJqM][YouTube]]
+
+#+BEGIN_QUOTE
+Provides live interaction with JavaScript, CSS, and HTML in a web browser. Expressions are sent on-the-fly from an editing buffer to be evaluated in the browser, just like Emacs does with an inferior Lisp process in Lisp modes.
+
+The keybindings for evaluating expressions in the browser are just like the Lisp modes. These are provided by the minor mode =skewer-mode=.
+
+- =C-x C-e= :: Evaluate the form before the point and display the result in the minibuffer. If given a prefix argument, insert the result into the current buffer.
+- =C-M-x=   :: Evaluate the top-level form around the point.
+- =C-c C-k= :: Load the current buffer.
+- =C-c C-z= :: Select the REPL buffer.
+
+#+END_QUOTE
+
+#+BEGIN_SRC emacs-lisp
+(use-package skewer-mode 
+  :ensure t
+  :init (skewer-setup))
+#+END_SRC
+
+** Clojure
+*** CIDER
+
+https://github.com/clojure-emacs/cider
+
+http://cider.readthedocs.io/en/latest/
+
+#+BEGIN_SRC 
+(use-package cider :ensure t)
+#+END_SRC
+
+*** clojure-mode
+
+https://github.com/clojure-emacs/clojure-mode
+
+#+BEGIN_SRC 
+(use-package clojure-mode :ensure t)
+#+END_SRC
+
+*** parinfer
+
+https://github.com/DogLooksGood/parinfer-mode
+
+#+BEGIN_SRC 
+(use-package parinfer
+  :ensure t
+  :bind
+  (("C-," . parinfer-toggle-mode))
+  :init
+  (progn
+    (setq parinfer-extensions
+          '(defaults       ; should be included.
+            pretty-parens  ; different paren styles for different modes.
+            lispy          ; If you use Lispy. With this extension, you should install Lispy and do not enable lispy-mode directly.
+            paredit        ; Introduce some paredit commands.
+            smart-tab      ; C-b & C-f jump positions and smart shift with tab & S-tab.
+            smart-yank))   ; Yank behavior depend on mode.
+    (add-hook 'clojure-mode-hook #'parinfer-mode)
+    (add-hook 'emacs-lisp-mode-hook #'parinfer-mode)
+    (add-hook 'common-lisp-mode-hook #'parinfer-mode)
+    (add-hook 'scheme-mode-hook #'parinfer-mode)
+    (add-hook 'lisp-mode-hook #'parinfer-mode)))
+#+END_SRC
+
+** Scheme
+
+#+BEGIN_SRC emacs-lisp
+(use-package geiser 
+  :ensure t
+  :config (setq geiser-scheme-implementation 'mit))
 #+END_SRC
 
 * Movimiento del Cursor
@@ -340,8 +519,8 @@ point reaches the beginning or end of the buffer, stop there."
 #+END_SRC
 
 * Org-Mode
-** Código fuente
-*** Sintaxis en colores en el buffer
+** Código fuente: Sintaxis en colores
+*** En el buffer
 
    Esta opción permite que los bloques de código en org-mode tengan syntax highlighting.
 
@@ -349,7 +528,7 @@ point reaches the beginning or end of the buffer, stop there."
 (setq org-src-fontify-natively t)
 #+END_SRC
 
-*** Sintaxis en colores al exportar a PDF
+*** Al exportar a PDF
 
 Utilizo el paquete =minted= para formatear los bloques de código fuente en el archivo pdf exportado. Esto requiere modificar el comando que usa org-mode para generar el pdf, agregando las opciones =-shell-escape= y =-interaction nonstopmode=.
 
@@ -383,7 +562,8 @@ Para configurar el color de fondo de los bloques de código fuente es necesario 
 
 Además se puede seleccionar el estilo del highlighting con el comando =\usemintedstyle{}=.
 
-#+BEGIN_SRC 
+#+NAME: minted-color
+#+BEGIN_SRC
 #+LaTeX_HEADER: \usemintedstyle{default}
 #+LaTeX_HEADER: \usepackage{xcolor}
 #+LaTeX_HEADER: \definecolor{bg}{rgb}{0.95,0.95,0.95}
@@ -395,12 +575,81 @@ Los estilos disponibles se pueden consultar con =pygmentize -L styles=
 pygmentize -L styles
 #+END_SRC
 
-*** Indentación en bloques de código
+Defino una función para insertar los headers que me permiten configurar el color de fondo y los estilos del highlighting.
 
-Este comando elimina toda intentación en el bloque de código luego de editarlo con =C-c C-'=. Por defecto le agrega 2 espacios en el margen izquierdo, lo que modifica la indentación correcta del lenguaje correspondiente.
+#+BEGIN_SRC emacs-lisp :var minted=minted-color
+(defvar my/org-pdf-src-style-color minted)
+(defun my/org-pdf-src-style () 
+   "Insert latex source code preamble for org export"
+   (interactive)
+   (insert my/org-pdf-src-style-color))
+#+END_SRC
+
+**** Themes
+***** Readtheorg
+#+NAME: readtheorg
+#+BEGIN_SRC 
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
+#+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+#+HTML_HEAD: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+#+HTML_HEAD: <style type="text/css">pre {background-color: #ddd}</style>
+#+END_SRC
+
+***** Bigblow
+#+NAME: bigblow
+#+BEGIN_SRC 
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/htmlize.css"/>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/bigblow.css"/>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/hideshow.css"/>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/jquery-1.11.0.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/jquery-ui-1.10.2.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/jquery.localscroll-min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/jquery.zclip.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/bigblow.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/hideshow.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
+#+HTML_HEAD: <style type="text/css">pre {background-color: #ddd}</style>
+#+END_SRC
+
+**** Insertar theme 
+
+#+BEGIN_SRC emacs-lisp :var rto=readtheorg bb=bigblow
+(defvar my/org-html-theme-readtheorg rto)
+(defvar my/org-html-theme-bigblow bb)
+(defun my/org-html-theme (theme) 
+   "Insert html theme preamble for org export"
+   (interactive
+     (list
+      (completing-read "Select theme (default readtheorg): " 
+         '("readtheorg" "bigblow"))))
+   (cond ((string= theme "") 
+            (insert my/org-html-theme-readtheorg)
+            (insert "\n"))
+         ((string= theme "readtheorg") 
+            (insert my/org-html-theme-readtheorg)
+            (insert "\n"))
+         ((string= theme "bigblow") 
+            (insert my/org-html-theme-bigblow)
+            (insert "\n"))
+         ((message "Available themes: readtheorg, bigblow"))))
+#+END_SRC
+
+** Código fuente: Indentación
+
+Este comando elimina toda intentación en el bloque de código luego de editarlo con =C-c C-'=. Por defecto, org-mode agrega 2 espacios en el margen izquierdo, lo que modifica la indentación correcta del lenguaje correspondiente.
 
 #+BEGIN_SRC emacs-lisp
 (setq org-edit-src-content-indentation 0)
+#+END_SRC
+
+** Código fuente: Edición en otra ventana
+
+#+BEGIN_SRC emacs-lisp
+(setq org-src-window-setup 'other-window)
 #+END_SRC
 
 ** Org-Babel: Lenguajes de programación
@@ -450,14 +699,6 @@ Este comando elimina toda intentación en el bloque de código luego de editarlo
 #+BEGIN_SRC emacs-lisp
 (use-package magit :ensure t)
 (use-package projectile :ensure t)
-#+END_SRC
-
-** Scheme Programming
-
-#+BEGIN_SRC emacs-lisp
-(use-package geiser 
-  :ensure t
-  :config (setq geiser-scheme-implementation 'mit))
 #+END_SRC
 
 ** Text modes (yaml, json, markdown, dockerfiles)
