--- a/emacs-config.org
+++ b/emacs-config.org
@@ -6,7 +6,7 @@
 #+LANGUAGE: en
 
 * Motivación
-  
+
   Una vez que uno decide utilizar *emacs* como editor de texto, una de las cosas que debe hacer es personalizar el editor según sus preferencias. Para ello es necesario editar el archivo *~/.emacs* y entonces comienzan los problemas. Se van a encontrar con miles y miles de ejemplos de este archivo de configuración, con miles de configuraciones y comandos diferentes; y se hace extremadamente tedioso entender y aprender cuáles son las que nos van a servir o las que nos convendría utilizar.
   
   Un problema muy común con el archivo .emacs es que rápidamente se va saliendo de control y al cabo de un tiempo ya no se sabe qué hace cada parte. Luego empieza a aparecer una especie de miedo supersticioso a modificar las preferencias, que se traduce en una tendencia a mantener bloques que uno ya se olvidó qué es lo que hacen pero que siguen conservando "para no romper lo que me está funcionando".
@@ -17,7 +17,7 @@
   
   Si abrieran con emacs este archivo, que tiene todas mis preferencias de configuración, van a ver un listado similar al siguiente:
  
-#+BEGIN_SRC
+#+BEGIN_ASCII
 - Motivación
 - Información Personal
 - Repositorios de Paquetes
@@ -27,7 +27,7 @@
 - Movimiento del Cursor
 - Teclado
 - Paquetes Varios
-#+END_SRC
+#+END_ASCII
   
   Cada uno de los títulos del documento es una sección que se puede abrir con la tecla TAB (y cerrarla con Shift-TAB) para examinarla en detalle, donde se van agregando ítems y sub-ítems que contienen los diferentes bloques de código para configurar las diversas funcionalidades del editor de acuerdo a mis preferencias.
   
@@ -35,7 +35,7 @@
   
   De esta manera, me queda un documento que me explica en detalle qué hace cada una de las opciones y que está ordenado, que es fácil de navegar y sobre todo de modificar. Ahora puedo entender qué hace cada opción, porque explico en detalle en cada sección y en cada ítem qué es lo que hace el bloque de código correspondiente. Y si existe una opción que ya no tiene sentido o que he dejado de utilizar, puedo cambiarla o incluso borrarla sin miedo a afectar el comportamiento general del editor.
   
-** Algunos links que utilicé como inspiración
+** Links que usé como inspiración
 
 - https://gitlab.com/buildfunthings/emacs-config/blob/master/loader.org
 - https://www.masteringemacs.org/article/my-emacs-keybindings
@@ -45,13 +45,21 @@
 - https://www.philnewton.net/guides/emacs-as-a-php-editor/
 - https://github.com/bbatsov/prelude
 
+** TODO Estudiar configs para sacar ideas
+
+- https://github.com/bzg/dotemacs/blob/master/emacs.org
+- https://github.com/bbatsov/emacs.d/blob/master/init.el
+- http://pages.sachachua.com/.emacs.d/Sacha.html#orgc27e81e
+- https://gitlab.com/buildfunthings/emacs-config/blob/master/loader.org
+- https://github.com/EnigmaCurry/emacs/blob/master/config.org
+
 * Información Personal
 
   En esta sección se registra el nombre y el email del usuario en dos variables globales a las que luego se puede hacer referencia desde diferentes scripts.
 
 #+BEGIN_SRC emacs-lisp
 (setq user-full-name "Martín Alsinet"
-      user-mail-address "malsinet")
+      user-mail-address "martin@alsinet")
 #+END_SRC
 
 * Repositorios de Paquetes
@@ -62,6 +70,8 @@
 (require 'package)
 (add-to-list 'package-archives
              '("melpa" . "https://melpa.org/packages/"))
+(add-to-list 'package-archives
+             '("org" . "https://orgmode.org/elpa/") t)
 (when (< emacs-major-version 24)
   ;; For important compatibility libraries like cl-lib
   (add-to-list 'package-archives 
@@ -182,44 +192,6 @@ Switch Theme ([[https://www.reddit.com/r/emacs/comments/30b67j/how_can_you_reset
 (switch-theme 'zenburn)
 #+END_SRC
 
-** Ocultar Mode-line
-
-Cuando uso org-mode para hacer presentaciones prefiero ocultar la línea de estatus (mode-line).
-
-#+BEGIN_SRC emacs-lisp
-(defvar-local hidden-mode-line-mode nil)
-
-(define-minor-mode hidden-mode-line-mode
-  "Minor mode to hide the mode-line in the current buffer."
-  :init-value nil
-  :global t
-  :variable hidden-mode-line-mode
-  :group 'editing-basics
-  (if hidden-mode-line-mode
-      (setq hide-mode-line mode-line-format
-            mode-line-format nil)
-    (setq mode-line-format hide-mode-line
-          hide-mode-line nil))
-  (force-mode-line-update)
-  ;; Apparently force-mode-line-update is not always enough to
-  ;; redisplay the mode-line
-  (redraw-display)
-  (when (and (called-interactively-p 'interactive)
-             hidden-mode-line-mode)
-    (run-with-idle-timer
-     0 nil 'message
-     (concat "Hidden Mode Line Mode enabled.  "
-             "Use M-x hidden-mode-line-mode to make the mode-line appear."))))
-
-;; If you want to hide the mode-line in every buffer by default
-;; (add-hook 'after-change-major-mode-hook 'hidden-mode-line-mode)
-
-
-#+END_SRC
-** Split Window
-#+BEGIN_SRC emacs-lisp
-(split-window-horizontally)
-#+END_SRC
 * Edición de Texto
 ** Indentación con espacios
 
@@ -305,13 +277,13 @@ Produce HTML usando sintaxis abreviada basada en selectores CSS - [[https://gith
 
 Ejemplo: Ingresando la siguiente abreviación =ul>li.item$*3= y luego presionando =C-j= se genera el un UL con tres LI de clase "itemX"
 
-#+BEGIN_SRC
+#+BEGIN_ASCII
 <ul>
    <li class="item1"></li>
    <li class="item2"></li>
    <li class="item3"></li>
 </ul>
-#+END_SRC
+#+END_ASCII
 
 #+BEGIN_SRC emacs-lisp
 (use-package emmet-mode 
@@ -326,23 +298,32 @@ Ejemplo: Ingresando la siguiente abreviación =ul>li.item$*3= y luego presionand
 
 Opciones Disponibles:
 
-#+BEGIN_SRC
+#+BEGIN_SRC emacs-lisp :eval never
+;By default, inserted markup will be indented with indent-region, according to the buffer's mode. To disable this, do:
+(add-hook 'emmet-mode-hook (lambda () (setq emmet-indent-after-insert nil)))
 
-; By default, inserted markup will be indented with indent-region, according to the buffer's mode. To disable this, do:
-; (add-hook 'emmet-mode-hook (lambda () (setq emmet-indent-after-insert nil)))
+;If you disable indent-region, you can set the default indent level thusly:
+(add-hook 'emmet-mode-hook (lambda () (setq emmet-indentation 2))) ;; indent 2 spaces.
 
-; If you disable indent-region, you can set the default indent level thusly:
-; (add-hook 'emmet-mode-hook (lambda () (setq emmet-indentation 2))) ;; indent 2 spaces.
+;If you want the cursor to be positioned between first empty quotes after expanding:
+(setq emmet-move-cursor-between-quotes t) ;; default nil
 
-; If you want the cursor to be positioned between first empty quotes after expanding:
-; (setq emmet-move-cursor-between-quotes t) ;; default nil
+;Or if you don't want to move cursor after expanding:
+(setq emmet-move-cursor-after-expanding nil) ;; default t
 
-; Or if you don't want to move cursor after expanding:
-; (setq emmet-move-cursor-after-expanding nil) ;; default t
+;If you want to use emmet with react-js's JSX, you probably want emmet to expand 'className="..."' instead of 'class="..."':
+(setq emmet-expand-jsx-className? t) ;; default nil
 
-; If you want to use emmet with react-js's JSX, you probably want emmet to expand 'className="..."' instead of 'class="..."':
-; (setq emmet-expand-jsx-className? t) ;; default nil
+#+END_SRC
 
+*** TODO Rainbow mode
+
+#+BEGIN_SRC emacs-lisp
+;(use-package rainbow-mode
+;  :ensure t
+;  :config
+;  ;(add-hook 'html-mode-hook 'rainbow-mode)
+;  (add-hook 'css-mode-hook 'rainbow-mode))
 #+END_SRC
 
 ** JS2 Mode
@@ -360,6 +341,10 @@ Improved Javascript Mode - [[https://github.com/mooz/js2-mode][Github]]
   :ensure t
   :mode (("\\.php\\'" . php-mode)))
 #+END_SRC
+
+*** TODO agregar flymake y phplint
+
+- http://enigmacurry.com/2011/07/01/php-code-compliance-in-emacs/
 
 ** Python Mode
 
@@ -379,7 +364,7 @@ Selección inteligente de bloques de acuerdo al formato del código - [[https://
 #+BEGIN_SRC emacs-lisp
 (use-package expand-region 
   :ensure t
-  :bind (("C-=" . er/expand-region)))
+  :bind (("M-=" . er/expand-region)))
 #+END_SRC
 
 ** Live Coding
@@ -442,7 +427,7 @@ https://github.com/clojure-emacs/cider
 
 http://cider.readthedocs.io/en/latest/
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp :eval never
 (use-package cider :ensure t)
 #+END_SRC
 
@@ -450,7 +435,7 @@ http://cider.readthedocs.io/en/latest/
 
 https://github.com/clojure-emacs/clojure-mode
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp :eval never
 (use-package clojure-mode :ensure t)
 #+END_SRC
 
@@ -458,7 +443,7 @@ https://github.com/clojure-emacs/clojure-mode
 
 https://github.com/DogLooksGood/parinfer-mode
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp :eval never
 (use-package parinfer
   :ensure t
   :bind
@@ -570,6 +555,14 @@ point reaches the beginning or end of the buffer, stop there."
 (define-key global-map (kbd "C-o") 'other-window)
 #+END_SRC
 
+** Alternativa para Meta-X
+
+Estoy probando [[https://termux.com/][Termux]], que permite usar emacs en Android. En el teclado bluetooth que estoy usando no me funciona la tecla Alt, así que necesito una alternativa para M-x. En [[https://sites.google.com/site/steveyegge2/effective-emacs][Effective Emacs]], Steve Yegge recomienda usar =C-x C-m=, y esa combinación es la que voy a usar.
+
+#+BEGIN_SRC emacs-lisp
+(global-set-key "\C-x\C-m" 'execute-extended-command)
+#+END_SRC
+
 * Org-Mode
 ** Org-indent-mode
 
@@ -623,15 +616,15 @@ Para configurar el color de fondo de los bloques de código fuente es necesario 
 Además se puede seleccionar el estilo del highlighting con el comando =\usemintedstyle{}=.
 
 #+NAME: minted-color
-#+BEGIN_SRC
+#+BEGIN_ASCII
 #+LaTeX_HEADER: \usemintedstyle{default}
 #+LaTeX_HEADER: \usepackage{xcolor}
 #+LaTeX_HEADER: \definecolor{bg}{rgb}{0.95,0.95,0.95}
-#+END_SRC
+#+END_ASCII
 
 Los estilos disponibles se pueden consultar con =pygmentize -L styles=
 
-#+BEGIN_SRC
+#+BEGIN_SRC sh :eval never
 pygmentize -L styles
 #+END_SRC
 
@@ -649,7 +642,7 @@ Defino una función para insertar los headers que me permiten configurar el colo
 **** Themes
 ***** Readtheorg
 #+NAME: readtheorg
-#+BEGIN_SRC 
+#+BEGIN_ASCII
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
 #+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -657,11 +650,11 @@ Defino una función para insertar los headers que me permiten configurar el colo
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
 #+HTML_HEAD: <style type="text/css">pre {background-color: #ddd}</style>
-#+END_SRC
+#+END_ASCII
 
 ***** Bigblow
 #+NAME: bigblow
-#+BEGIN_SRC 
+#+BEGIN_ASCII
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/bigblow.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/hideshow.css"/>
@@ -674,7 +667,7 @@ Defino una función para insertar los headers que me permiten configurar el colo
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/bigblow/js/hideshow.js"></script>
 #+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
 #+HTML_HEAD: <style type="text/css">pre {background-color: #ddd}</style>
-#+END_SRC
+#+END_ASCII
 
 **** Insertar theme 
 
@@ -709,6 +702,24 @@ Este comando elimina toda intentación en el bloque de código luego de editarlo
 (setq org-edit-src-content-indentation 0)
 #+END_SRC
 
+** TODO Código fuente: check settings
+
+source: https://github.com/EnigmaCurry/emacs/blob/master/config.org#org-babelsource-blocks
+
+#+BEGIN_QUOTE
+I like to have source blocks properly syntax highlighted and with the editing popup window staying within the same window so all the windows don’t jump around. Also, having the top and bottom trailing lines in the block is a waste of space, so we can remove them.
+
+I noticed that fontification doesn’t work with markdown mode when the block is indented after editing it in the org src buffer—the leading #s for headers don’t get fontified properly because they appear as Org comments. Setting org-src-preserve-indentation makes things consistent as it doesn’t pad source blocks with leading spaces.
+#+END_QUOTE
+
+#+BEGIN_SRC emacs-lisp :eval never
+(setq org-src-fontify-natively t
+      org-src-window-setup 'current-window
+      org-src-strip-leading-and-trailing-blank-lines t
+      org-src-preserve-indentation t
+      org-src-tab-acts-natively t)
+#+END_SRC
+
 ** Código fuente: Edición en otra ventana
 
 #+BEGIN_SRC emacs-lisp
@@ -723,7 +734,7 @@ Este comando elimina toda intentación en el bloque de código luego de editarlo
     'org-babel-load-languages
           '((scheme . t)
             (python . t)
-            (sh . t)
+            (shell . t)
             (js . t)
             (emacs-lisp . t))))
 
@@ -749,7 +760,7 @@ Traté de usar los hooks pero me oculta la línea y después no la puedo volver 
 Precise behaviour of org-present during start and quit is controlled from hooks. The following will enlarge text, show images, hide the cursor and make the buffer read-only:
 #+END_QUOTE
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp :eval never
 (eval-after-load "org-present"
   '(progn
      (add-hook 'org-present-mode-hook
@@ -821,5 +832,20 @@ Modifico la tecla "q" para que destruya el buffer cuando lo cierro.
 (use-package mwe-log-commands :ensure t)
 (use-package buffer-move :ensure t)
 #+END_SRC
+
+* TODO Paquetes para evaluar
+** Stack Exchange
+
+https://github.com/vermiculus/sx.el
+
+** Ledger mode + Org mode
+
+YouTube: Conquering Your Finances with Emacs and Ledger
+https://www.youtube.com/watch?v=cjoCNRpLanY&t=1155s
+** Newsfeeds & Email in gnus
+** escreen
+
+- https://github.com/knu/elscreen
+- https://github.com/wasamasa/eyebrowse
 
 
